# mobile-code-context

./: .gitignore  README.md  pyproject.toml
scripts/: install.sh  setup-vscode-mcp.py
src/mobile_code_context/: __init__.py  config.py  engine.py  server.py
src/mobile_code_context/context/: __init__.py  extractor.py  fan_in.py  manager.py  vertical_slice.py
src/mobile_code_context/detector/: __init__.py  platform.py
src/mobile_code_context/indexer/: __init__.py  chunker.py  embedder.py  parser_kotlin.py  parser_swift.py  scanner.py  store.py
src/mobile_code_context/reindex/: __init__.py  delta.py
src/mobile_code_context/tools/: __init__.py  module.py  overview.py  search.py  siblings.py
tests/: __init__.py  test_chunker.py  test_detector.py  test_fan_in.py  test_optimization.py  test_search.py
