[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mobile-code-context"
version = "0.1.0"
description = "MCP server that indexes mobile codebases (Android/iOS) and provides semantic search + architecture context to IDE agents"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}

dependencies = [
    # MCP Protocol
    "mcp[cli]>=1.0.0",

    # RAG / Embeddings
    "lancedb>=0.13.0",
    "sentence-transformers>=3.0.0",
    "transformers>=4.40.0,<5.0.0",
    "einops>=0.8.0",
    "pyarrow>=17.0.0",
    "numpy>=1.26.0",
    "pandas>=2.1.0",

    # Code Parsing
    "tree-sitter>=0.23.0",
    "tree-sitter-kotlin>=0.1.0",
    "tree-sitter-swift>=0.6.0",

    # Git
    "gitpython>=3.1.40",

    # Utilities
    "structlog>=24.4.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
]

[project.scripts]
mobile-code-context = "mobile_code_context.server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
